more refactoring and addition of comments/docstrings

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Dog Rescue</a>
+            <a class="navbar-brand" href="/">Dog Rescue Webapp</a>
         </div>
     </nav>
 
