--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,10 +2,10 @@
 content %}
 
 <section class="homePage">
-  <!-- <h1>{{data}}</h1> -->
-  <h3>Dog rescue webapp!</h3>
+  <br>
+  <h2><strong>Dog Rescue Webapp!</strong></h2>
   <img
-    src="{{ url_for('static', filename='kermit.JPG') }}"
+    src="{{ url_for('static', filename='tink_and_kermit.JPG') }}"
     alt=""
     class="homeImg"
   />
@@ -88,7 +88,6 @@ content %}
   </div>
 
   <!-- Button trigger modal Search Dogs-->
-
   <button
     type="button"
     class="btn btn-primary"
